moving to my mac for building